# FileConversion

./: .gitignore  Dockerfile  README.Docker.md  README.md  server.config  server_config.json  service.rs
app/: Cargo.toml  server_config.json
app/src/: converters.rs  main.rs  service.rs
app/src/converters/: image_conversion.rs
app/src/service/: image_conversion.rs
site/: package-lock.json  package.json
site/src/: App.css  App.tsx  CardTable.tsx  ConvertRequestButton.tsx  SelectorMode.tsx  Utils.ts  index.css
