[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-web = "4"
bytes = "0.5.6"
futures = "0.3.5"
once_cell = "1.19.0"
sanitize-filename = "0.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
image = "0.25.1"
magick_rust = "1.0.0"
image-convert = "0.16.1"
